fixed overflow-y

--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -2,7 +2,6 @@
 
 * {
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 h1 {
